--- a/revelare/revelare/doctype/configuration_revelare/configuration_revelare.json
+++ b/revelare/revelare/doctype/configuration_revelare/configuration_revelare.json
@@ -1,24 +1,27 @@
 {
  "allow_copy": 0, 
+ "allow_events_in_timeline": 0, 
  "allow_guest_to_view": 0, 
  "allow_import": 0, 
  "allow_rename": 0, 
  "beta": 0, 
- "creation": "2018-03-06 11:22:12.365006", 
+ "creation": "2019-05-25 16:08:49.532539", 
  "custom": 0, 
  "docstatus": 0, 
  "doctype": "DocType", 
  "document_type": "", 
- "editable_grid": 1, 
+ "editable_grid": 0, 
  "engine": "InnoDB", 
  "fields": [
   {
    "allow_bulk_edit": 0, 
+   "allow_in_quick_entry": 0, 
    "allow_on_submit": 0, 
    "bold": 0, 
    "collapsible": 0, 
    "columns": 0, 
-   "fieldname": "dato", 
+   "fetch_if_empty": 0, 
+   "fieldname": "data_1", 
    "fieldtype": "Data", 
    "hidden": 0, 
    "ignore_user_permissions": 0, 
@@ -27,7 +30,7 @@
    "in_global_search": 0, 
    "in_list_view": 0, 
    "in_standard_filter": 0, 
-   "label": "Dato", 
+   "label": "Hello", 
    "length": 0, 
    "no_copy": 0, 
    "permlevel": 0, 
@@ -40,6 +43,40 @@
    "reqd": 0, 
    "search_index": 0, 
    "set_only_once": 0, 
+   "translatable": 0, 
+   "unique": 0
+  }, 
+  {
+   "allow_bulk_edit": 0, 
+   "allow_in_quick_entry": 0, 
+   "allow_on_submit": 0, 
+   "bold": 0, 
+   "collapsible": 0, 
+   "columns": 0, 
+   "fetch_if_empty": 0, 
+   "fieldname": "configuracion_reporte_gaseco_section", 
+   "fieldtype": "Section Break", 
+   "hidden": 0, 
+   "ignore_user_permissions": 0, 
+   "ignore_xss_filter": 0, 
+   "in_filter": 0, 
+   "in_global_search": 0, 
+   "in_list_view": 0, 
+   "in_standard_filter": 0, 
+   "label": "Configuracion reporte GASECO", 
+   "length": 0, 
+   "no_copy": 0, 
+   "permlevel": 0, 
+   "precision": "", 
+   "print_hide": 0, 
+   "print_hide_if_no_value": 0, 
+   "read_only": 0, 
+   "remember_last_selected_value": 0, 
+   "report_hide": 0, 
+   "reqd": 0, 
+   "search_index": 0, 
+   "set_only_once": 0, 
+   "translatable": 0, 
    "unique": 0
   }
  ], 
@@ -50,30 +87,29 @@
  "image_view": 0, 
  "in_create": 0, 
  "is_submittable": 0, 
- "issingle": 1, 
+ "issingle": 0, 
  "istable": 0, 
  "max_attachments": 0, 
- "modified": "2018-03-06 11:22:12.365006", 
+ "modified": "2019-05-25 17:32:34.607223", 
  "modified_by": "Administrator", 
  "module": "Revelare", 
- "name": "Configuration", 
+ "name": "Configuration Revelare", 
  "name_case": "", 
  "owner": "Administrator", 
  "permissions": [
   {
    "amend": 0, 
-   "apply_user_permissions": 0, 
    "cancel": 0, 
    "create": 1, 
    "delete": 1, 
    "email": 1, 
-   "export": 0, 
+   "export": 1, 
    "if_owner": 0, 
    "import": 0, 
    "permlevel": 0, 
    "print": 1, 
    "read": 1, 
-   "report": 0, 
+   "report": 1, 
    "role": "System Manager", 
    "set_user_permissions": 0, 
    "share": 1, 
@@ -86,7 +122,8 @@
  "read_only_onload": 0, 
  "show_name_in_global_search": 0, 
  "sort_field": "modified", 
- "sort_order": "DESC", 
+ "sort_order": "ASC", 
  "track_changes": 1, 
- "track_seen": 0
+ "track_seen": 0, 
+ "track_views": 0
 }
